Modell angepasst